# mamba_ema

./: .gitignore  CLAUDE.md  FINETUNE_IMPLEMENTATION.md  README.md  pyproject.toml
configs/: ms_mamba.yaml
docs/: README.md  implementation_complete.md
docs/experiments/: attention-pooling.md  config-comparison.md  finetune-guide.md  unfreeze-encoder-analysis.md  v2-failure-analysis.md  v4-cross-attention-implementation.md  valence-arousal-feature-separation.md
docs/tutorials/: README.md
papers/: README.md
pretrained_model/: README.md
scripts/: debug_model_output.py  download_models_from_hf.py  download_models_from_ms.py  draw_architecture.py  extract_ccsemo_all_folds.sh  extract_egemaps.py  extract_egemaps_ccsemo.py  extract_egemaps_llds.py  extract_features.py  precompute_pitch.py  test_dataset.py  test_model.py  train_all_folds_parallel.sh  train_full_parallel.sh  verify_finetune.sh
src/: README.md  train.py
src/data/: ccsemo_dataset.py  collate.py  collate_features.py  collate_features_v2.py  feature_dataset.py  feature_dataset_v2.py  iemocap_dataset.py
src/losses/: ccc_loss.py  combined_loss.py  mse_loss.py
src/metrics/: ccc_metric.py
src/models/: mamba_ema_model.py  ms_mamba_model.py
src/models/encoders/: prosody_encoder.py  speaker_encoder.py  speech_encoder.py
src/models/modules/: cross_attention.py  ema.py  film.py  global_mamba.py  layer_fusion.py  mamba_updater.py  moe.py  pitch_cross_attention.py  sobel_edge_detector.py  sparse_mamba.py  speaker_adaptive_ln.py  speaker_cross_attention.py  style_pooling.py  transformer_updater.py  windowed_mamba.py
src/utils/: checkpoint.py  config.py  experiment.py  logger.py  registry.py  seed.py
