[project]
name = "mamba_ema"
version = "0.1.0"
description = "mamba_emoa project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "transformers==4.44.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.34,<1.0",
    "librosa>=0.11.0",
    "praat-parselmouth>=0.4.6",
    "matplotlib>=3.0.0",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "nvitop>=1.6.0",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.2",
    "ipdb>=0.13.13",
    "opensmile>=2.6.0",
    "speechbrain>=1.0.3",
    "torchvision==0.15.2",
    "markupsafe==2.1.5",
    "mamba-ssm==2.2.1",
    "numpy<2.0.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"


